--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     
     <header class="header">
         <div class="menu container">
-            <img clase="logo" src="mi_logo-removebg-preview.png" width="60px">
+            <img clase="logo" src="images/mi_logo-removebg-preview.png" width="60px">
             <input type="checkbox" id="menu"/> 
             <label for="menu">
                 <img src="images/menu.png" class="menu icono" alt="">
@@ -56,7 +57,7 @@
             <img src="images/g5.jpg" alt="">
             <img src="images/g6.jpg" alt="">
             <img src="images/g7.jpg" alt="">
-            <img src="mario.jpeg" alt="">
+            <img src="images/mario.jpeg" alt="">
         </div>
     </section>
 
@@ -65,12 +66,12 @@
         <h2>Videos </h2>
         
         <div class="Videos-content">
-        <video src="Grand Theft Auto V_ The Official Trailer.mp4" controls width="150px"></video>
-        <video src="Official Reveal Trailer _ Call of Duty_ Ghosts.mp4" controls width="150px"  ></video>
-        <video src="Best Moment From Battlefield 2042 Trailer (Rendezook Scene).mp4" controls width="150px"></video>
-        <video src="Crash Team Racing Nitro-Fueled - Reveal Trailer _ PS4.mp4" controls width="150px"></video>
-        <video src="Fortnite Battle Royale_ Tráiler del juego.mp4" controls width="150px"></video>
-        <video src="New Super Mario Bros. U Deluxe - Launch Trailer - Nintendo Switch.mp4" controls width="150px"></video>
+        <video src="videos/Grand Theft Auto V_ The Official Trailer.mp4" controls width="150px"></video>
+        <video src="videos/Official Reveal Trailer _ Call of Duty_ Ghosts.mp4" controls width="150px"  ></video>
+        <video src="videos/Best Moment From Battlefield 2042 Trailer (Rendezook Scene).mp4" controls width="150px"></video>
+        <video src="videos/Crash Team Racing Nitro-Fueled - Reveal Trailer _ PS4.mp4" controls width="150px"></video>
+        <video src="videos/Fortnite Battle Royale_ Tráiler del juego.mp4" controls width="150px"></video>
+        <video src="videos/New Super Mario Bros. U Deluxe - Launch Trailer - Nintendo Switch.mp4" controls width="150px"></video>
     </div>
 </section>
 
@@ -208,7 +209,7 @@
         </div>
 
         <div class="product-1">
-            <img src="descarga (1).jpeg" width="400px">
+            <img src="images/descarga.jpeg" width="400px">
             <div class="product-txt">
                 <h3>Mario Deluxe</h3>
                 <div class="price">
@@ -252,7 +253,7 @@
             </ul>
     </div>
  <br>
-       <center><img clase="logo" src="mi_logo-removebg-preview.png" width="200px"></center>
+       <center><img clase="logo" src="images/mi_logo-removebg-preview.png" width="200px"></center>
     </div>
 </footer>
 
@@ -271,10 +272,10 @@
 <center><h4>Modulo: 1.5</h4></center>
  <center><h4>Especialidad: Desarrollador de Software</h4></center>
  <center><h4>Edad: 16 años  </h4></center>
- <center><h4><img src="a_yo-removebg-preview.png" width="200px"></h4></center><br>
+ <center><h4><img src="images/a_yo-removebg-preview.png" width="200px"></h4></center><br>
 
  <audio controls autoplay>
-   <source src="Super Mario Bros. Theme Song.mp3" type="audio/mp3"> 
+   <source src="cancion/Super Mario Bros. Theme Song.mp3" type="audio/mp3"> 
  </audio>
 
  <footer>
